--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#home" class="smoothScroll">HOME</a></li>
-				<li><a href="#gallery" class="smoothScroll">FOOD GALLERY</a></li>
-				<li><a href="#menu" class="smoothScroll">SPECIAL MENU</a></li>
-				<li><a href="#team" class="smoothScroll">CHEFS</a></li>
-				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
+				<li><a href="#home">HOME</a></li>
+				<li><a href="#gallery">FOOD GALLERY</a></li>
+				<li><a href="#menu">SHOW COOKING</a></li>
+				<li><a href="#team">CHEFS</a></li>
+				<li><a href="#contact">CONTACT</a></li>
 			</ul>
 		</div>
 	</div>
@@ -53,7 +53,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h1>Today RESTAURANT</h1>
+				<h1>TODAY RESTAURANT</h1>
 				<h2>ALL &amp; You can eat</h2>
 				
 			</div>
@@ -73,31 +73,31 @@
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
 				<a href="images/gallery-img1.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img1.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Prawn</h3>
+					<h3>Dessert</h3>
 					<span>Seafood / Shrimp / Lemon</span>
 				</div>
 				<a href="images/gallery-img2.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img2.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Vegetables</h3>
+					<h3>Baker</h3>
 					<span>Tomato / Rosemary / Lemon</span>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<a href="images/gallery-img3.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img3.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Bakery</h3>
+					<h3>Sushi</h3>
 					<span>Bread / Rosemary / Orange</span>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
 				<a href="images/gallery-img4.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img4.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Salad</h3>
+					<h3>Dumplings</h3>
 					<span>Chicken / Rosemary / Green</span>
 				</div>
 				<a href="images/gallery-img5.jpg" data-lightbox-gallery="zenda-gallery"><img src="images/gallery-img5.jpg" alt="gallery img"></a>
 				<div>
-					<h3>Lemon-Rosemary Pizza</h3>
+					<h3>Peking Duck</h3>
 					<span>Pasta / Rosemary / Green</span>
 				</div>
 			</div>
@@ -110,7 +110,10 @@
 <section id="menu" class="parallax-section">
 	<div class="container">
 		<div class="row">
-			
+			<div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
+				<h1 class="heading">Show Cooking</h1>
+				<hr>
+			</div>
 		</div>
 	</div>
 </section>		
@@ -126,18 +129,18 @@
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
 				<img src="images/team1.jpg" class="img-responsive center-block" alt="team img">
-				<h4>XXX</h4>
+				<h4>Stephan</h4>
 				<h3>Main Chef</h3>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<img src="images/team2.jpg" class="img-responsive center-block" alt="team img">
-				<h4>XXX</h4>
-				<h3>Sushi Specialist</h3>
+				<h4>Alesso</h4>
+				<h3>Baker</h3>
 			</div>
 			<div class="col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
 				<img src="images/team3.jpg" class="img-responsive center-block" alt="team img">
 				<h4>XXX</h4>
-				<h3>Baker</h3>
+				<h3>Sushi Specialist</h3>
 			</div>
 		</div>
 	</div>
