--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section id ="pricing" class="description_content">
              <div class="pricing background_content">
                 <h1><span>Affordable</span> pricing </h1>
-				<h1><span>15.95/19.95</span> Lunch/Dinner </h1>
+				<h1><span>€9.95/€19.95</span> Lunch/Dinner </h1>
              </div>
             <div class="text-content container"> 
                 <div class="container">
@@ -240,10 +240,11 @@
                     <!-- Form Area -->
                     <div class="contact-form">
                         <!-- Form -->
-                        <form id="contact-us" method="post" action="reserve.php">
+                        <form id="contact-us" method="post" action="reserve.php" role="form">
                             <!-- Left Inputs -->
                             <div class="container">
                                 <div class="row">
+								<div class="messages"></div>
                                     <div class="col-lg-8 col-md-6 col-xs-12">
                                         <div class="row">
                                             <div class="col-lg-6 col-md-6 col-xs-6">
@@ -262,7 +263,7 @@
 
                                             <div class="col-xs-6 ">
                                                 <!-- Send Button -->
-                                                <button type="submit" id="submit" name="submit" class="text-center form-btn form-btn">Submit</button> 
+                                                <input type="submit" id="submit" name="submit" class="text-center form-btn form-btn"></input> 
                                             </div>
                                             
                                         </div>
@@ -303,6 +304,7 @@
                 <div class="col-md-4">
                     <span class="social_heading">OR DIAL</span>
                     <span class="social_info"><a class="color_animation" href="tel:0035725567001">(00357) 25 567001</a></span>
+					 <span class="social_info"><a class="color_animation" href="tel:0035795582888">Chinese Speaking:95582888</a></span>
                 </div>
             </div>
         </section>
@@ -330,6 +332,7 @@
         <script type="text/javascript" src="js/jquery-1.10.2.js"></script>     
         <script type="text/javascript" src="js/jquery.mixitup.min.js" ></script>
         <script type="text/javascript" src="js/main.js" ></script>
-
+		 <script src="validator.js"></script>
+		 <script src="contact.js"></script>
     </body>
 </html>
